--- a/05 angular-controller-displayList-Filter/index.html
+++ b/05 angular-controller-displayList-Filter/index.html
@@ -14,6 +14,8 @@
 	This page have hard-coded data bound to table in the view
 	<br />
 	The controller retrieve the data from the service
+	<br />
+	This page is using filter dropdown menu to filter the schedule list
 	</p>
 </blockquote>
 
@@ -55,6 +57,8 @@
 	1. the data is hard-coded within the service file
 	2. the controller has the service as the dependency
 	3. the service is injected into the controller
+	4. use angular-filter to take the at data, and return only the distinct value
+	5. the distinct of data (schedule.at data) got bound to the dropdown menu
 	</pre>
 
 </div>
